Bug 507103 - Tags should be visible in the ledger view
Summary: Tags should be visible in the ledger view
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: ux-ui (other bugs)
Version First Reported In: 5.2.0
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 507723 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-07-16 09:38 UTC by sigma343
Modified: 2025-08-01 10:33 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sigma343 2025-07-16 09:38:06 UTC
SUMMARY
In prior versions of KMM, tags on transactions were visible in the ledger view. This is no longer the case and should be brought back as a option / default view. 

STEPS TO REPRODUCE
1. Open ledger
2. Transactions with tags do not display the tags in the line item view

OBSERVED RESULT
Tags do not show in the ledger view (without opening a transaction)

EXPECTED RESULT
Tags should show for all ledger items which are tagged

SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux 
KDE Plasma Version: 6.3.6
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1
Comment 1 Thomas Baumgart 2025-07-18 14:07:39 UTC
Git commit 9e5803456fc739f7c8ac8d96b1796225620ce612 by Thomas Baumgart.
Committed on 18/07/2025 at 12:42.
Pushed by tbaumgart into branch 'master'.

Make tags visible in ledger
FIXED-IN: 5.2.1

M  +36   -1    kmymoney/views/journaldelegate.cpp

https://invent.kde.org/office/kmymoney/-/commit/9e5803456fc739f7c8ac8d96b1796225620ce612
Comment 2 Thomas Baumgart 2025-07-18 16:17:55 UTC
Git commit 404a63eaec234bebedc924b91d2678b96ec47e02 by Thomas Baumgart.
Committed on 18/07/2025 at 14:07.
Pushed by tbaumgart into branch '5.2'.

Make tags visible in ledger
FIXED-IN: 5.2.1
(cherry picked from commit 9e5803456fc739f7c8ac8d96b1796225620ce612)

M  +36   -1    kmymoney/views/journaldelegate.cpp

https://invent.kde.org/office/kmymoney/-/commit/404a63eaec234bebedc924b91d2678b96ec47e02
Comment 3 Thomas Baumgart 2025-08-01 10:33:03 UTC
*** Bug 507723 has been marked as a duplicate of this bug. ***