Make tags visible in ledger

BUG: 507103
FIXED-IN: 5.2.1